--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
+    "require-dev": {
+        "phpunit/phpunit": "7.3.*"
+    },
+    "minimum-stability": "dev",
     "require": {
-        "m4tthumphrey/php-gitlab-api": "dev-master"
+        "m4tthumphrey/php-gitlab-api": "^6",
+        "kriswallsmith/buzz": "0.15.2"
     }
 }
