--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     },
     "minimum-stability": "dev",
     "require": {
+        "monolog/monolog": "1.9.*",
         "m4tthumphrey/php-gitlab-api": "^6",
         "kriswallsmith/buzz": "0.15.2"
     }
